MF basic implementation

--- a/e-commerce-platform/vanilla-js/container/src/index.html
+++ b/e-commerce-platform/vanilla-js/container/src/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Container Host</h1>
     <div>
+        <div id="shopping-cart" style="display: flex; flex-wrap: wrap; gap: 16px;"></div>
         <div id="product-list" style="display: flex; flex-wrap: wrap; gap: 16px;"></div>
         <!-- Products will be rendered here -->
     </div>
