--- a/e-commerce-platform/vanilla-js/products/src/index.html
+++ b/e-commerce-platform/vanilla-js/products/src/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products Component</title>
+    <style>
+        .product-card:hover {
+            background-color: #b4dcef;
+        }
+    </style>
 </head>
 
 <body>
